--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
     a {
       color: inherit;
-      text-decoration: none;
+      text-decoration: none
       cursor: pointer;
     }
     a:focus, button:focus {
@@ -454,7 +454,7 @@
   <a href="#main" class="skip-link">Skip to main content</a>
   <div id="splash" tabindex="0" aria-label="Open One-DraZ storytelling platform">
     <div class="title-box" role="heading" aria-level="1">One-DraZ</div>
-    <div class="subtitle" role="note" tabindex="0">Enter to a new-World</div>
+    <div class="subtitle" role="note" tabindex="0">Click to enter a New World</div>
   </div>
   <main id="main" role="main" aria-hidden="true">
     <header>
